--- a/refs.bib
+++ b/refs.bib
@@ -90,7 +90,7 @@
 @inproceedings{ZhZh21,
   title     = {Maximizing influence of leaders in social networks},
   author    = {Zhou, Xiaotian and Zhang, Zhongzhi},
-  booktitle = {Proceedings of the 27th ACM SIGKDD Conference on Knowledge Discovery \& Data Mining},
+  booktitle = {Proc. 27th ACM SIGKDD Conf. Knowl. Discovery Data Min.},
   pages     = {2400--2408},
   year      = {2021}
 }
@@ -206,29 +206,29 @@
 @inproceedings{XuZhXiYu14,
   title        = {Detection on application layer {DDoS} using random walk model},
   author       = {Xu, Chuan and Zhao, Guofeng and Xie, Gaogang and Yu, Shui},
-  booktitle    = {2014 IEEE International Conference on Communications (ICC)},
+  booktitle    = {2014 IEEE Int. Conf. Commun.},
   pages        = {707--712},
   year         = {2014},
   organization = {IEEE}
-}
+}% booktitle    = {2014 IEEE International Conference on Communications (ICC)},
 
 @inproceedings{WaJiZhZh10,
   title     = {Image annotation refinement using random walk with restarts},
   author    = {Wang, Changhu and Jing, Feng and Zhang, Lei and Zhang, Hong-Jiang},
-  booktitle = {Proceedings of the 14th ACM international conference on Multimedia},
+  booktitle = {Proc. 14th ACM Int. Conf. Multimed.},
   pages     = {647--650},
   year      = {2006}
-}
+}% booktitle = {Proceedings of the 14th ACM international conference on Multimedia},
 
 @inproceedings{LiPeMaQiWeQi10,
   title        = {Improving diversity in Web search results re-ranking using absorbing random walks},
   author       = {Lin, Gu-Li and Peng, Hong and Ma, Qian-Li and Wei, Jia and Qin, Jiang-Wei},
-  booktitle    = {2010 International Conference on Machine Learning and Cybernetics},
+  booktitle    = {2010 Int. Conf. Mach. Learn. Cybern.},
   volume       = {5},
   pages        = {2116--2421},
   year         = {2010},
   organization = {IEEE}
-}
+}% booktitle    = {2010 International Conference on Machine Learning and Cybernetics},
 
 @article{GoViHuRa10,
   author  = {Viswanath Gopalakrishnan and
@@ -310,7 +310,7 @@
 
 @inproceedings{RoGl16,
   author    = {Rosenfeld, Nir and Globerson, Amir},
-  booktitle = {Advances in Neural Information Processing Systems},
+  booktitle = {Adv. Neural Inf. Process. Syst.},
   editor    = {D. Lee and M. Sugiyama and U. Luxburg and I. Guyon and R. Garnett},
   pages     = {1307--1315},
   publisher = {Curran Associates, Inc.},
@@ -318,7 +318,7 @@
   url       = {https://proceedings.neurips.cc/paper/2016/file/c8ed21db4f678f3b13b9d5ee16489088-Paper.pdf},
   volume    = {29},
   year      = {2016}
-}
+}% booktitle = {Advances in Neural Information Processing Systems},
 
 @inproceedings{GaLePaGoLiZh15,
   title     = {Pivotality of nodes in reachability problems using avoidance and transit hitting time metrics},
@@ -354,10 +354,10 @@
 @inproceedings{GiBaRa21,
   title     = {A group-to-group version of random walk betweenness centrality},
   author    = {Gillani, Iqra Altaf and Bagchi, Amitabha and Ranu, Sayan},
-  booktitle = {Proceedings of the 3rd ACM India Joint International Conference on Data Science \& Management of Data (8th ACM IKDD CODS \& 26th COMAD)},
+  booktitle = {Proc. 3rd ACM India Joint Int. Conf. Data Sci. Manag. Data},
   pages     = {127--135},
   year      = {2021}
-}
+}% booktitle = {Proceedings of the 3rd ACM India Joint International Conference on Data Science \& Management of Data (8th ACM IKDD CODS \& 26th COMAD)},
 
 @inproceedings{WaRaSk19,
   title     = {Random walk decay centrality},
@@ -403,10 +403,10 @@
 @inproceedings{ClPo11,
   title     = {A submodular optimization framework for leader selection in linear multi-agent systems},
   author    = {Clark, Andrew and Poovendran, Radha},
-  booktitle = {IEEE Conference on Decision and Control and European Control Conference},
+  booktitle = {Proc. IEEE Conf. Decis. Control},
   pages     = {3614-3621},
   year      = {2011}
-}
+}% booktitle = {IEEE Conference on Decision and Control and European Control Conference},
 
 % Nearly Linear Time Algorithm for Mean Hitting Times of Random Walks on a Graph
 
@@ -420,44 +420,15 @@
 }% booktitle    = {Proceedings of the twentieth ACM SIGMOD-SIGACT-SIGART Symposium on Principles of Database Systems},
 
 @article{BaBaPaVe04,
-  author                     = {Barrat, A and Barthelemy, M and Pastor-Satorras, R and Vespignani, A},
-  title                      = {{The architecture of complex weighted networks}},
-  journal                    = {{Proceedings of the National Academy of Sciences of the United States of America}},
-  year                       = {{2004}},
-  volume                     = {{101}},
-  number                     = {{11}},
-  pages                      = {{3747-3752}},
-  month                      = {{MAR 16}},
-  publisher                  = {{NATL ACAD SCIENCES}},
-  address                    = {{2101 CONSTITUTION AVE NW, WASHINGTON, DC 20418 USA}},
-  type                       = {{Article}},
-  language                   = {{English}},
-  affiliation                = {{Vespignani, A (Reprint Author), Univ Paris 11, UMR CNRS 8627, Phys Theor Lab, Batiment 210, F-91405 Orsay, France.
-                                Univ Paris 11, UMR CNRS 8627, Phys Theor Lab, F-91405 Orsay, France.
-                                CEA, Dept Phys Theor \& Appl, F-91191 Gif Sur Yvette, France.
-                                Univ Politecn Cataluna, Dept Fis \& Engn Nucl, ES-08034 Barcelona, Spain.}},
-  doi                        = {{10.1073/pnas.0400087101}},
-  issn                       = {{0027-8424}},
-  keywords-plus              = {{SMALL-WORLD NETWORKS; BETWEENNESS; CENTRALITY}},
-  research-areas             = {{Science \& Technology - Other Topics}},
-  web-of-science-categories  = {{Multidisciplinary Sciences}},
-  author-email               = {{alexv@th.u-psud.fr}},
-  researcherid-numbers       = {{Vespignani, Alessandro/A-8794-2009
-                                barthelemy, marc/B-3942-2008
-                                Pastor-Satorras, Romualdo/L-8837-2013
-                                }},
-  orcid-numbers              = {{Pastor-Satorras, Romualdo/0000-0002-4051-6007
-                                Vespignani, Alessandro/0000-0003-3419-4205}},
-  number-of-cited-references = {{24}},
-  times-cited                = {{1543}},
-  usage-count-last-180-days  = {{10}},
-  usage-count-since-2013     = {{228}},
-  journal-iso                = {{Proc. Natl. Acad. Sci. U. S. A.}},
-  doc-delivery-number        = {{804QZ}},
-  unique-id                  = {{ISI:000220314500008}},
-  oa                         = {{gold\_or\_bronze}},
-  da                         = {{2018-08-12}}
-}
+  title     = {The architecture of complex weighted networks},
+  author    = {Barrat, Alain and Barthelemy, Marc and Pastor-Satorras, Romualdo and Vespignani, Alessandro},
+  journal   = {Proc. Natl. Acad. Sci. U. S. A.},
+  volume    = {101},
+  number    = {11},
+  pages     = {3747--3752},
+  year      = {2004},
+  publisher = {National Acad Sciences}
+}% journal={Proceedings of the National Academy of Sciences of the United States of America},
 
 @book{BeGrTh74,
   title     = {Generalized inverses: theory and applications},
@@ -492,7 +463,7 @@
 @inproceedings{ChLiTa08,
   title        = {Clustering via Random Walk Hitting Time on Directed Graphs},
   author       = {Chen, M. and Liu, J.  Z. and Tang, X.},
-  booktitle    = {Proc. AAAI Conf. Artificial Intelligence},
+  booktitle    = {Proc. AAAI Conf. Artif. Intell.},
   pages        = {616--621},
   year         = {2008},
   organization = {AAAI}
@@ -549,7 +520,7 @@
 @article{Le06,
   title     = {Random walks for image segmentation},
   author    = {Grady, Leo},
-  journal   = {IEEE Trans. Pattern Analysis and Machine Intelligence},
+  journal   = {IEEE Trans. Pattern Anal. Mach. Intell.},
   volume    = {28},
   number    = {11},
   pages     = {1768--1783},
@@ -602,7 +573,7 @@
 @inproceedings{KySa16,
   title        = {Approximate {G}aussian elimination for {L}aplacians-fast, sparse, and simple},
   author       = {Kyng, Rasmus and Sachdeva, Sushant},
-  booktitle    = {Proc. IEEE 57th Ann. Symp. Found.  Comput. Sci.},
+  booktitle    = {Proc. IEEE 57th Ann. Symp. Found. Comput. Sci.},
   pages        = {573--582},
   year         = {2016},
   organization = {IEEE}
@@ -611,7 +582,7 @@
 @article{LaDeBa14,
   title     = {Random walks, Markov processes and the multiscale modular organization of complex networks},
   author    = {Lambiotte, Renaud and Delvenne, Jean-Charles and Barahona, Mauricio},
-  journal   = {IEEE Transs Netw. Sci. Eng.},
+  journal   = {IEEE Trans. Netw. Sci. Eng.},
   volume    = {1},
   number    = {2},
   pages     = {76--90},
@@ -654,7 +625,7 @@
 @article{LiZh13PRE,
   title     = {Random walks in weighted networks with a perfect trap: An application of {L}aplacian spectra},
   author    = {Lin, Yuan and Zhang, Zhongzhi},
-  journal   = {Physical Review E},
+  journal   = {Phys. Rev E},
   volume    = {87},
   number    = {6},
   pages     = {062140},
@@ -741,20 +712,20 @@
 @inproceedings{Sp10,
   title        = {Algorithms, graph theory, and linear equations in Laplacian matrices},
   author       = {Spielman, Daniel A},
-  booktitle    = {Proceedings of the International Congress of Mathematicians 2010 (ICM 2010) (In 4 Volumes) Vol. I: Plenary Lectures and Ceremonies Vols. II--IV: Invited Lectures},
+  booktitle    = {Proc. Int. Congress Math.},
   pages        = {2698--2722},
   year         = {2010},
   organization = {World Scientific}
-}
+}% booktitle    = {Proceedings of the International Congress of Mathematicians 2010 (ICM 2010)},
 
 @inproceedings{SpTe04,
   title        = {Nearly-linear time algorithms for graph partitioning, graph sparsification, and solving linear systems},
   author       = {Spielman, Daniel A and Teng, Shang-Hua},
-  booktitle    = {Proceedings of the thirty-sixth Annual ACM Symposium on Theory of Computing},
+  booktitle    = {Proc. 36th Annu. ACM Symp. Theory Comput.},
   pages        = {81--90},
   year         = {2004},
   organization = {ACM}
-}
+}% booktitle    = {Proceedings of the 36th Annual ACM Symposium on Theory of Computing},
 
 @article{TeBeVo09,
   title     = {Global mean first-passage times of random walks on complex networks},
@@ -1012,17 +983,17 @@
 @article{LuChReZhZhZh16,
   title     = {Vital nodes identification in complex networks},
   author    = {L{\"u}, Linyuan and Chen, Duanbing and Ren, Xiao-Long and Zhang, Qian-Ming and Zhang, Yi-Cheng and Zhou, Tao},
-  journal   = {Physics Reports},
+  journal   = {Phys. Rep.},
   volume    = {650},
   pages     = {1--63},
   year      = {2016},
   publisher = {Elsevier}
-}
+}% journal   = {Physics Reports},
 
 @inproceedings{WhSm03,
   title     = {Algorithms for estimating relative importance in networks},
   author    = {White, Scott and Smyth, Padhraic},
-  booktitle = {KDD},
+  booktitle = {Proc. ACM SIGKDD Conf. Knowl. Discovery Data Min.},
   pages     = {266--275},
   year      = {2003}
 }
@@ -1030,13 +1001,13 @@
 @article{BoVi14,
   title     = {Axioms for centrality},
   author    = {Boldi, Paolo and Vigna, Sebastiano},
-  journal   = {Internet Mathematics},
+  journal   = {Internet Math.},
   volume    = {10},
   number    = {3-4},
   pages     = {222--262},
   year      = {2014},
   publisher = {Taylor \& Francis}
-}
+}% journal   = {Internet Mathematics},
 
 @article{BeKl15,
   title     = {On the limiting behavior of parameter-dependent network centrality measures},
@@ -1052,10 +1023,10 @@
 @inproceedings{BoDeRi16,
   title     = {Centrality measures on big graphs: {E}xact, approximated, and distributed algorithms},
   author    = {Bonchi, Francesco and De Francisci Morales, Gianmarco and Riondato, Matteo},
-  booktitle = {Proceedings of the 25th International Conference Companion on World Wide Web},
+  booktitle = {Proc. 25th Int. Conf. Companion World Wide Web},
   pages     = {1017--1020},
   year      = {2016}
-}
+}% booktitle = {Proceedings of the 25th International Conference Companion on World Wide Web},
   %organization={ACM}
 
 @inproceedings{LiZh18,
@@ -1071,10 +1042,10 @@
 @inproceedings{YiShLiZh18,
   title     = {Biharmonic Distance Related Centrality for Edges in Weighted Networks.},
   author    = {Yi, Yuhao and Shan, Liren and Li, Huan and Zhang, Zhongzhi},
-  booktitle = {Proceedings of the 27th International Joint Conference on Artificial Intelligence},
+  booktitle = {Proc. 27th Int. Joint Conf. Artif. Intell.},
   pages     = {3620--3626},
   year      = {2018}
-}
+}% booktitle = {Proceedings of the 27th International Joint Conference on Artificial Intelligence},
 
 @article{Br01,
   title     = {A faster algorithm for betweenness centrality},
@@ -1090,22 +1061,22 @@
 @inproceedings{GeSaSc08,
   title     = {Better approximation of betweenness centrality},
   author    = {Geisberger, Robert and Sanders, Peter and Schultes, Dominik},
-  booktitle = {Proceedings of the Meeting on Algorithm Engineering {\&} Expermiments},
+  booktitle = {Proc. Meet. Algorithm Eng. Exp.},
   pages     = {90--100},
   year      = {2008}
-}
+}% booktitle = {Proceedings of the Meeting on Algorithm Engineering {\&} Expermiments},
   %organization={ACM}
 
 @article{Ba48,
   title     = {A mathematical model for group structures},
   author    = {Bavelas, Alex},
-  journal   = {Human organization},
+  journal   = {Hum. Organ.},
   volume    = {7},
   number    = {3},
   pages     = {16--30},
   year      = {1948},
   publisher = {Society for Applied Anthropology}
-}
+}% journal   = {Human Organization},
 
 @article{Ba50,
   title     = {Communication patterns in task-oriented groups},
@@ -1135,11 +1106,9 @@
                Henning Meyerhenke},
   title     = {Estimating Current-Flow Closeness Centrality with a Multigrid {L}aplacian
                Solver},
-  booktitle = {Proceedings of the 7th {SIAM} Workshop on Combinatorial Scientific
-               Computing (CSC)},
+  booktitle = {Proc. 7th {SIAM} Workshop Comb. Sci. Comput.},
   pages     = {1--12},
   year      = {2016},
-  url       = {https://doi.org/10.1137/1.9781611974690.ch1},
   doi       = {10.1137/1.9781611974690.ch1},
   timestamp = {Tue, 04 Jul 2017 08:59:39 +0200},
   biburl    = {http://dblp.uni-trier.de/rec/bib/conf/siamcsc/BergaminiWLM16},
@@ -1171,16 +1140,16 @@
 @inproceedings{Yo14,
   title        = {Almost linear-time algorithms for adaptive betweenness centrality using hypergraph sketches},
   author       = {Yoshida, Yuichi},
-  booktitle    = {Proceedings of the 20th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  booktitle    = {Proc. 20th ACM SIGKDD Int. Conf. Knowl. Discovery Data Min.},
   pages        = {1416--1425},
   year         = {2014},
   organization = {ACM}
-}
+}% booktitle    = {Proceedings of the 20th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
 
 @inproceedings{MaTsUp16,
   title        = {Scalable betweenness centrality maximization via sampling},
   author       = {Mahmoody, Ahmad and Tsourakakis, Charalampos E and Upfal, Eli},
-  booktitle    = {KDD},
+  booktitle    = {Proc. 22nd ACM SIGKDD Int. Conf. Knowl. Discovery Data Min.},
   pages        = {1765--1773},
   year         = {2016},
   organization = {ACM}
